--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["dvkt <c@dvkt.io>"]
 edition = "2018"
 
 [dependencies]
-async-std = "1.4.0"
 content_inspector = "0.2.4"
+threadpool = "1.7.1"
