--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "phd"
-version = "0.1.4-dev"
+version = "0.1.4"
 authors = ["dvkt <c@dvkt.io>"]
 license = "MIT"
 edition = "2018"
