--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ gophermap = "0.1.2"
 
 [package.metadata.release]
 pre-release-replacements = [
-  {file="README.md", search="phd-v\\d\\.\\d\\.\\d-", replace="{{crate_name}}-v{{version}}-"},
-  {file="README.md", search="/v\\d\\.\\d\\.\\d/", replace="/v{{version}}/"},
+  {file="README.md", search="phd-v\\d+\\.\\d+\\.\\d+-", replace="{{crate_name}}-v{{version}}-"},
+  {file="README.md", search="/v\\d+\\.\\d+\\.\\d+/", replace="/v{{version}}/"},
 ]
 dev-version-ext = "dev"
 
